dark mode fixed in all pages

--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,10 @@ footer ul li {
         padding-top: 2rem;
         padding-bottom: 2rem;
     }
+    nav{
+        height: 0px;
+        padding-bottom: 1rem;
+    }
 
     .rotate-20 {
         font-size: 20px;
@@ -529,6 +533,17 @@ footer ul li {
 
     #highlight-section {
         margin-top: 3rem;
+    }
+
+    .dark-mode-toggle, 
+    .toggle, .toggle::after,
+    .dark-mode .toggle, 
+    .dark-mode .toggle::after{
+       display: flex;
+       justify-content: flex-start;
+       position: fixed;
+       top: 25px;
+       left: 20px;
     }
 
     .review-img {
